# agent-sre

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
agent_sre/: __init__.py  drift.py  eval.py  fix.py  golden.py  guard.py  mcp_client.py  mcp_config.json  orchestrator.py  prevent.py  run_diagnose.py  run_spine.py  server.py  sre_agent.py
cockpit/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
cockpit/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
cockpit/src/components/: DiagnoseCard.tsx  DriftTab.tsx  FixCard.tsx  Gate.tsx  GuardCard.tsx  MeasureCard.tsx  PreventCard.tsx  StepCard.tsx  TargetPanel.tsx  VerifyCard.tsx
docs/: CLAUDE.md  arize-integration-and-tasks.md  devpost-writeup-skeleton.md  fixtures-and-ground-truth.md
scripts/: deploy_cloud_run.sh  generate_drift_traces.py  mcp_smoke.py  model_probe.py  seed_prompt.py  smoke_trace.py
target_agent/: __init__.py  agent.py  drift_agent.py  fixtures.py  instrumentation.py  prompt.py  prompt_source.py  run_incident.py
