[project]
name = "agent-sre"
version = "0.1.0"
description = "Agent SRE — an autonomous reliability agent that debugs other AI agents via Arize Phoenix traces. Google Cloud Rapid Agent Hackathon, Arize track."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.13"
dependencies = [
    # Agent runtime + Gemini (Vertex) — code-owned ADK is required by the Arize track
    "google-adk>=1.32.0",
    "google-genai>=1.9.0",
    # Tracing: google-adk instrumentation ONLY (auto-captures agent + tool + Gemini spans).
    # Deliberately NOT including instrumentation-vertexai / -google-genai (redundant duplicate spans).
    "openinference-instrumentation-google-adk>=0.1.11",
    # Evals + datasets + experiments engine (the SRE's measurement, steps 2/4/5/6)
    "arize-phoenix>=7.0",
    # Plumbing
    "python-dotenv>=1.0.1",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    # Cockpit backend (uvicorn + sse-starlette already pulled in transitively by arize-phoenix)
    "fastapi>=0.110",
]

# Application layout (target_agent/ agent_sre/ scripts/), not a distributable package —
# tell uv to manage the venv + deps without trying to build a wheel.
[tool.uv]
package = false
